--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href='{{ "favicon/site.webmanifest" | relURL }}' />
     <link rel="mask-icon" href=' {{ "favicon/safari-pinned-tab.svg" | relURL }}' color="#5bbad5" />
     <link rel="shortcut icon" href='{{ "favicon/favicon.ico" | relURL }}' />
+    <meta name="google-site-verification" content="_d8T34LYLuWnPc4pCHpjxe-q8PkUFDf8Twqy4pW0hC4" />
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="{{site.Title}}{{if not .IsHome}} | {{.Title}}{{end}}" />
     {{ $styles := resources.Get "css/style.css" | postCSS }}
