--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
         {{- partial "header.html" . -}}
         <div class="container max-w-screen-xl mx-auto mt-4 flex-grow px-5 lg:px-0" id="content">
             <div class="lg:mx-5">
+                <h1>{{ .Title }}</h1>
             {{- block "main" . }}{{- end }}
             </div>
         </div>
